--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
 }
 apply plugin: 'kotlin-android'
 
@@ -63,8 +64,7 @@ dependencies {
     implementation "com.github.terrakok:cicerone:$cicerone_version"
 
     // DI
-    implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
-    implementation "org.kodein.di:kodein-di-framework-android-x:$kodein_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
