--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         cicerone_version = "7.0"
         coroutines_version = "1.5.0"
         glide_version = "4.12.0"
-        kodein_version = "6.4.0"
+        koin_version = "2.2.2"
         kotlin_version = "1.4.31"
         lifecycle_version = "2.2.0"
         moshi_version = "1.12.0"
