--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,12 @@ dependencies {
     // ViewBinding
     implementation "com.github.yogacp:android-viewbinding:1.0.3"
 
+    // Shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    // RecyclerView Animators
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
+
     // Tests
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
