--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,13 @@ dependencies {
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
+    // Country code picker
+    implementation 'com.hbb20:ccp:2.4.0'
+
+    // Pin entry view
+    implementation 'me.philio:pinentryview:1.0.6'
 
     // Tests
     testImplementation 'junit:junit:4.+'
