--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:theme="@style/Theme.PassionWoman"
         android:name="ru.babaetskv.passionwoman.app.MainApp">
 
-        <activity android:name="ru.babaetskv.passionwoman.app.presentation.MainActivity">
+        <activity
+            android:name="ru.babaetskv.passionwoman.app.presentation.MainActivity"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
