--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,10 @@ buildscript {
         glide_version = "4.12.0"
         koin_version = "2.2.2"
         kotlin_version = "1.4.31"
+        kotpref_version = "2.13.1"
         lifecycle_version = "2.2.0"
         moshi_version = "1.12.0"
+        retrofit_version = "2.9.0"
     }
     repositories {
         google()
