--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,9 @@ dependencies {
     // Pin entry view
     implementation 'me.philio:pinentryview:1.0.6'
 
+    // Image picker
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+
     // Tests
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
