Fixed manifest and memory errors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:screenOrientation="portrait"
+        android:windowSoftInputMode="adjustResize"
         android:theme="@style/Theme.PassionWoman"
         android:name="ru.babaetskv.passionwoman.app.MainApp">
 
-        <activity
-            android:name="ru.babaetskv.passionwoman.app.presentation.MainActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize">
+        <activity android:name="ru.babaetskv.passionwoman.app.presentation.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
