--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+        adapter_delegates_version = "4.3.0"
         cicerone_version = "7.0"
         coroutines_version = "1.4.2"
         glide_version = "4.12.0"
