--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         kotpref_version = "2.13.1"
         lifecycle_version = "2.2.0"
         moshi_version = "1.12.0"
+        okhttp_version = "4.9.1"
         retrofit_version = "2.9.0"
     }
     repositories {
