--- a/data/build.gradle
+++ b/data/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
+    // Paging
+    api "androidx.paging:paging-runtime-ktx:3.0.1"
+
     // Tests
     testApi 'junit:junit:4.13.2'
     testApi 'org.mockito.kotlin:mockito-kotlin:3.2.0'
