--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,13 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
     id 'kotlin-android'
     id 'kotlin-parcelize'
+}
+if (getGradle().getStartParameter().getTaskRequests().toString().contains("hms")) {
+    apply plugin: 'com.huawei.agconnect'
+}
+if (getGradle().getStartParameter().getTaskRequests().toString().contains("gms")) {
+    apply plugin: 'com.google.gms.google-services'
 }
 
 android {
@@ -23,23 +28,37 @@ android {
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            buildConfigField 'Boolean', 'ANALYTICS_ENABLED', 'false'
         }
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            buildConfigField 'Boolean', 'ANALYTICS_ENABLED', 'true'
         }
     }
-    flavorDimensions "1"
+    flavorDimensions "functionality", "services"
     productFlavors {
         demo {
-            dimension "1"
+            dimension "functionality"
             applicationIdSuffix ""
             versionNameSuffix "-demo"
         }
         full {
-            dimension "1"
+            dimension "functionality"
             applicationIdSuffix ""
             versionNameSuffix ""
+        }
+        hms {
+            dimension "services"
+            applicationIdSuffix ".huawei"
+            versionNameSuffix "-hms"
+        }
+        gms {
+            dimension "services"
+            applicationIdSuffix ""
+            versionNameSuffix "-gms"
         }
     }
     compileOptions {
@@ -90,11 +109,6 @@ dependencies {
     // Circle indicator
     implementation "me.relex:circleindicator:2.1.6"
 
-    // Firebase
-    implementation platform('com.google.firebase:firebase-bom:28.0.1')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-auth-ktx'
-
     // Country code picker
     implementation 'com.hbb20:ccp:2.4.0'
 
@@ -107,6 +121,15 @@ dependencies {
     // AdapterDelegates
     implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl:$adapter_delegates_version"
     implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:$adapter_delegates_version"
+
+    // Firebase
+    gmsImplementation platform('com.google.firebase:firebase-bom:28.0.1')
+    gmsImplementation 'com.google.firebase:firebase-analytics-ktx'
+    gmsImplementation 'com.google.firebase:firebase-auth-ktx'
+
+    // Huawei Analytics Kit
+    hmsImplementation 'com.huawei.agconnect:agconnect-core:1.3.1.300'
+    hmsImplementation 'com.huawei.hms:hianalytics:5.0.0.301'
 }
 repositories {
     mavenCentral()
