--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         android:usesCleartextTraffic="true"
         android:name="ru.babaetskv.passionwoman.app.MainApp">
 
+        <meta-data android:name="firebase_analytics_collection_enabled" android:value="false" />
+
         <activity android:name="ru.babaetskv.passionwoman.app.presentation.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
