--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     api "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
     api "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
+    // Logging
+    api 'com.jakewharton.timber:timber:4.7.1'
 }
