--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -42,6 +42,7 @@ android {
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
 
     // Lifecycle
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
