--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,13 @@ plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
+    id 'jacoco'
     id 'kotlin-android'
     id 'kotlin-parcelize'
 }
 
 apply from: 'signingCredentials.gradle'
+apply from: "$project.rootDir/tools/jacoco.gradle"
 
 android {
     compileSdkVersion 32
@@ -131,6 +133,12 @@ dependencies {
 
     // ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
+
+    // Tests
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
 repositories {
     mavenCentral()
