--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         cicerone_version = "7.0"
         coroutines_version = "1.4.2"
         glide_version = "4.12.0"
+        jacoco_version = '0.8.6'
         koin_version = "2.2.2"
         kotlin_version = "1.4.31"
         kotpref_version = "2.13.1"
@@ -22,6 +23,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.8'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+        classpath "org.jacoco:org.jacoco.core:$jacoco_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
