--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'com.android.library'
+    id 'jacoco'
     id 'kotlin-android'
 }
+
+apply from: "$project.rootDir/tools/jacoco.gradle"
 
 android {
     compileSdkVersion 30
@@ -60,8 +63,8 @@ dependencies {
     api "androidx.paging:paging-runtime-ktx:3.0.1"
 
     // Tests
-    testApi 'junit:junit:4.13.2'
-    testApi 'org.mockito.kotlin:mockito-kotlin:3.2.0'
-    androidTestApi 'androidx.test.ext:junit:1.1.3'
-    androidTestApi 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
