--- a/data/build.gradle
+++ b/data/build.gradle
@@ -41,6 +41,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    testOptions {
+        unitTests.returnDefaultValues true
+    }
 }
 
 dependencies {
