--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,7 +91,7 @@ dependencies {
     implementation "com.github.terrakok:cicerone:$cicerone_version"
 
     // DI
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
@@ -116,7 +116,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-dynamic-links-ktx'
 
     // Country code picker
-    implementation 'com.hbb20:ccp:2.4.0'
+    implementation 'com.hbb20:ccp:2.5.0'
 
     // Pin entry view
     implementation 'me.philio:pinentryview:1.0.6'
