--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,21 +82,22 @@ dependencies {
     implementation project(":domain")
 
     // Common
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
+
+    // ConstraintLayout
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     // Navigation
     implementation "com.github.terrakok:cicerone:$cicerone_version"
 
     // DI
-    implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
+    implementation "io.insert-koin:koin-android:$koin_version"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     // ViewBinding
