Added unit test for get profile interactor

--- a/tools/jacoco.gradle
+++ b/tools/jacoco.gradle
@@ -46,6 +46,7 @@ def setupAndroidReporting() {
     tasks.withType(Test) {
         // Whether or not classes without source location should be instrumented
         jacoco.includeNoLocationClasses true
+        jacoco.excludes = ['jdk.internal.*']
     }
 
     // Grab all build types and product flavors
