--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,11 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        compose true
         viewBinding true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
     }
     applicationVariants.all { variant ->
         variant.outputs.all {
@@ -138,11 +142,20 @@ dependencies {
     // SplashScreen
     implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
 
+    // Jetpack Compose
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
+
     // Tests
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 }
 repositories {
     mavenCentral()
