--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         adapter_delegates_version = "4.3.0"
         cicerone_version = "7.0"
+        compose_version = "1.1.1"
         coroutines_version = "1.5.2"
         glide_version = "4.12.0"
         jacoco_version = '0.8.6'
@@ -19,7 +20,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath "com.android.tools.build:gradle:7.0.4"
         classpath 'com.google.gms:google-services:4.3.10'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
