--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,12 +91,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     // Navigation
-    implementation "com.github.terrakok:cicerone:$cicerone_version"
+    implementation "com.github.terrakok:cicerone:7.0"
 
     // DI
-    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-android:3.1.5"
 
     // Glide
+    def glide_version = "4.12.0"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
@@ -126,6 +127,7 @@ dependencies {
     implementation 'com.github.dhaval2404:imagepicker:2.1'
 
     // AdapterDelegates
+    def adapter_delegates_version = "4.3.0"
     implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl:$adapter_delegates_version"
     implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:$adapter_delegates_version"
 
