--- a/data/build.gradle
+++ b/data/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'jacoco'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 apply from: "$project.rootDir/tools/jacoco.gradle"
@@ -50,17 +51,26 @@ dependencies {
     implementation project(":domain")
 
     // JSON handling
+    def moshi_version = "1.12.0"
     api "com.squareup.moshi:moshi:$moshi_version"
     api "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
     // Preferences
+    def kotpref_version = "2.13.1"
     api "com.chibatching.kotpref:kotpref:$kotpref_version"
     implementation "com.chibatching.kotpref:enum-support:$kotpref_version"
 
     // Network
+    def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
+
+    // Database
+    def room_version = "2.4.3"
+    demoImplementation "androidx.room:room-ktx:$room_version"
+    demoAnnotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // Paging TODO: move to the app layer
     api "androidx.paging:paging-runtime-ktx:3.1.0"
