--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -32,10 +32,12 @@ android {
 }
 
 dependencies {
+    def coroutines_version = "1.5.2"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
 
     // Lifecycle
+    def lifecycle_version = "2.4.1"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     api "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
