--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,6 +143,7 @@ dependencies {
     // Tests
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
