--- a/data/build.gradle
+++ b/data/build.gradle
@@ -16,6 +16,7 @@ android {
         targetSdkVersion 32
 
         buildConfigField 'String', 'API_URL', '"http://192.168.1.167:8080"' // TODO: check
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -79,6 +80,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.json:json:20180813'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2"
 }
