--- a/data/build.gradle
+++ b/data/build.gradle
@@ -76,12 +76,7 @@ dependencies {
     // Paging TODO: move to the app layer
     api "androidx.paging:paging-runtime-ktx:3.1.0"
 
-    // Tests TODO: add global versions
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.json:json:20180813'
-    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2"
+    // Testing
+    testImplementation project(path: ":domain", configuration: "testDependencies")
+    androidTestImplementation project(path: ":domain", configuration: "androidTestDependencies")
 }
