--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -31,6 +31,11 @@ android {
     }
 }
 
+configurations {
+    testDependencies.extendsFrom testImplementation
+    androidTestDependencies.extendsFrom androidTestImplementation
+}
+
 dependencies {
     def coroutines_version = "1.5.2"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
@@ -51,4 +56,10 @@ dependencies {
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.json:json:20180813'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2"
 }
