--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,13 +82,13 @@ dependencies {
     implementation project(":domain")
 
     // Common
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation "android.arch.lifecycle:extensions:1.1.1"
 
     // ConstraintLayout
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Navigation
     implementation "com.github.terrakok:cicerone:7.0"
@@ -135,10 +135,13 @@ dependencies {
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     // ExoPlayer
-    implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
 
     // SplashScreen
-    implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
+    implementation 'androidx.core:core-splashscreen:1.0.0'
+
+    // Paging
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
 
     // Testing
     testImplementation project(path: ":domain", configuration: "testDependencies")
