--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -59,7 +59,10 @@ dependencies {
     testImplementation 'org.json:json:20180813'
     testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2"
+    androidTestImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2") {
+        exclude group: "org.jetbrains.kotlinx", module: "kotlinx-coroutines-debug"
+    }
 }
