Added Firebase push notifications

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,13 @@ apply from: 'signingCredentials.gradle'
 apply from: "$project.rootDir/tools/jacoco.gradle"
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "ru.babaetskv.passionwoman.app"
         minSdkVersion 21
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 3
         versionName "0.2.0"
 
@@ -33,16 +33,15 @@ android {
         }
     }
 
-    flavorDimensions "1"
+    flavorDimensions "version"
     productFlavors {
         demo {
-            dimension "1"
-            applicationIdSuffix ""
+            dimension "version"
+            applicationId "ru.babaetskv.passionwoman.demo.app"
             versionNameSuffix "-demo"
         }
         full {
-            dimension "1"
-            applicationIdSuffix ""
+            dimension "version"
             versionNameSuffix ""
         }
     }
@@ -116,6 +115,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-dynamic-links-ktx'
+    implementation 'com.google.firebase:firebase-messaging-ktx'
 
     // Country code picker
     implementation 'com.hbb20:ccp:2.5.0'
@@ -142,6 +142,10 @@ dependencies {
 
     // Paging
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+
+    // WorkManager
+    def work_version = "2.7.1"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
 
     // Testing
     testImplementation project(path: ":domain", configuration: "testDependencies")
