Refactoring demo screen

--- a/app/src/demo/AndroidManifest.xml
+++ b/app/src/demo/AndroidManifest.xml
@@ -1,24 +1,1 @@
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <application>
-
-        <activity
-            android:name="ru.babaetskv.passionwoman.app.presentation.MainActivity"
-            android:exported="true">
-            <intent-filter tools:node="remove">
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name="ru.babaetskv.passionwoman.app.presentation.feature.demopresets.DemoPresetsActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
-</manifest>
+<manifest/>
